--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -141,6 +141,7 @@
     <integer-array translatable="false" name="config_tether_upstream_types">
         <item>0</item>
         <item>1</item>
+        <item>4</item>
         <item>5</item>
         <item>7</item>
     </integer-array>
@@ -164,9 +165,11 @@
         <item>mobile_fota,10,0,2,60000,true</item>
         <item>mobile_ims,11,0,2,60000,true</item>
         <item>mobile_cbs,12,0,2,60000,true</item>
+        <item>mobile_ia,14,0,2,-1,true</item>
         <item>bluetooth,7,7,2,-1,true</item>
         <item>mobile_emergency,15,0,5,-1,true</item>
         <item>ethernet,9,9,3,-1,true</item>
+        <item>mobile_800apn,37,0,2,60000,true</item>
     </string-array>
 
     <!-- This string array should be overridden by the device to present a list of radio
