use correct power_profile.xml from stock

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -1,62 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
     <item name="none">0</item>
-    <item name="screen.on">103</item>
-    <item name="screen.full">175</item>
+    <item name="screen.on">98.648</item>
+    <item name="screen.full">193.430</item>
     <item name="bluetooth.active">30</item>
     <item name="bluetooth.on">1</item>
-    <item name="wifi.on">1</item>
-    <item name="wifi.active">100</item>
-    <item name="wifi.scan">24</item>
-    <item name="camera.avg">129</item>
-    <item name="camera.flashlight">108</item>
-    <item name="gps.on">70</item>
-    <item name="radio.active">120</item>
-    <item name="radio.scanning">13</item>
+    <item name="wifi.on">1.075</item>
+    <item name="wifi.active">41.638</item>
+    <item name="wifi.scan">4.446</item>
+    <item name="camera.avg">570.594</item>
+    <item name="camera.flashlight">40.478</item>
+    <item name="gps.on">19.646</item>
+    <item name="radio.active">301.705</item>
+    <item name="radio.scanning">36.905</item>
     <array name="radio.on">
+        <value>48</value>
+        <value>10</value>
         <value>5</value>
-        <value>5</value>
+        <value>2</value>
+        <value>0.5</value>
     </array>
     <array name="cpu.clusters.cores">
-        <value>2</value>
-        <value>2</value>
+        <value>4</value>
     </array>
     <array name="cpu.speeds.cluster0">
-        <value>652800</value>
-        <value>1036800</value>
-        <value>1401600</value>
-        <value>1689600</value>
-        <value>1843200</value>
-        <value>1958400</value>
-        <value>2016000</value>
+        <value>960000</value>
+        <value>1044000</value>
+        <value>1248000</value>
+        <value>1401000</value>
     </array>
     <array name="cpu.active.cluster0">
-        <value>41</value>
-        <value>56</value>
-        <value>67</value>
-        <value>87</value>
-        <value>95</value>
-        <value>106</value>
-        <value>112</value>
+        <value>119.711</value>
+        <value>199.005</value>
+        <value>318.450</value>
+        <value>299.501</value>
     </array>
-    <array name="cpu.speeds.cluster1">
-        <value>652800</value>
-        <value>1036800</value>
-        <value>1401600</value>
-        <value>1689600</value>
-        <value>1843200</value>
-        <value>1958400</value>
-        <value>2016000</value>
-    </array>
-    <array name="cpu.active.cluster1">
-        <value>41</value>
-        <value>56</value>
-        <value>67</value>
-        <value>87</value>
-        <value>95</value>
-        <value>106</value>
-        <value>112</value>
-    </array>
-    <item name="cpu.idle">4</item>
-    <item name="cpu.awake">13</item>
+    <item name="cpu.idle">3.094</item>
+    <item name="cpu.awake">3.648</item>
+    <item name="battery.capacity">5000</item>
 </device>
